@@ -1,3 +1,8 @@
+<b>2009-03-02</b>
+
+* Facebook: "Today" flights posted earlier, at 01:00 EST
+* Facebook: Multiple "today" flights can be posted
+
 <b>2009-02-27</b>
 
 * Facebook app can now post update on flight day
